--- a/index.html
+++ b/index.html
@@ -204,7 +204,14 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button"
+              data-code="107d00f92b90101619ff1daf911730f6"
+              data-button-style="custom_large"
+              data-button-text="Preorder with Bitcoin"
+              href="https://coinbase.com/checkouts/107d00f92b90101619ff1daf911730f6">
+              Preorder with Bitcoin
+            </a>
+            <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
